# sberpunk

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
src/sberpunk/: __init__.py  directory_scanner.py  quetelet_index.py  rag.py  six_sigma.py  topic_modeling.py
src/sberpunk/examples/DirectoryScanner/: DirectoryScanner.ipynb  demo files.7z  demo report.html
src/sberpunk/examples/DirectoryScanner/demo files/: not a docx file.docx.txt  Ленинград - БСЭ.docx.txt  Летний отдых россиян 1.png.txt  Летний отдых россиян 2.jpeg.txt  Трудовой договор.pdf.txt  Туризм в России.xlsx.txt
src/sberpunk/examples/LDATopicModeler/: LDATopicModeler.ipynb
src/sberpunk/examples/Process/: Process.ipynb
src/sberpunk/examples/QueteletIndex/: QueteletIndex.ipynb  data.csv
src/sberpunk/examples/Rag/: Rag.ipynb
src/sberpunk/examples/SberProcess/: SberProcess.ipynb
src/sberpunk/stats/: __init__.py  quetelet_index.py  six_sigma.py
src/sberpunk/text/: __init__.py  directory_scanner.py  rag.py  topic_modeling.py
