[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sberpunk"
version = "0.2"
description = "Collection of helper modules made for various tasks in Sber"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black", "gensim", "matplotlib", "more-itertools",
    "multimethod", "nltk", "numpy", "pandas", "pymorphy3",
    "scipy==1.12", "seaborn", "sentence_transformers",
    "torch==2.3.1", "transformers"
]
authors = [{ name = "Evgeny Meredelin", email = "eimeredelin@sberbank.ru" }]

[project.optional-dependencies]
dir = [
    "IPython", "docx2python", "extract_msg", "openpyxl",
    "patool", "pdfminer.six", "pillow", "pytesseract",
    "python-pptx", "striprtf", "tabulate", "xlrd"
]
